hphp/test/zend/good/ext/standard/tests/file/realpath_variation2.php.skipif
<?php
<<__EntryPoint>> function main() {
if(substr(PHP_OS, 0, 3) == 'WIN' )
  die("skip Not Valid for Windows");
}
